loom/crates/loom-templates/tests/snapshots/snapshots__run_snapshot_review_concern.snap
---
source: crates/loom-templates/tests/snapshots.rs
assertion_line: 203
expression: ctx.render().unwrap()
---
# Implementation Step

## Context Pinning

First, read the project overview to understand project terminology and context:

# Project Overview

Loom orchestrates the spec-to-implementation workflow.

## Current Feature

Label: loom-harness
Spec file: specs/loom-harness.md

## Companions

The following companion directories are in scope. Read each one's `manifest.md` on demand:

- lib/sandbox/


## Style Rules

Before writing or modifying code, read `docs/style-rules.md` end-to-end. The
document is organized into rule families; discover the families from the
document itself — do not assume a fixed prefix list. Apply every rule that
is applicable to the diff you are about to produce, citing each rule by the
id it is given in the document.

## Scratchpad

You have a per-session scratchpad at `.wrapix/loom/scratch/<key>/scratch.md`,
where `<key>` is your session's concurrency unit — the spec label for `loom
plan` / `loom todo` sessions, the bead ID for `loom run` / `loom check` /
`loom msg` sessions. The file starts empty; append to it as the session
progresses.

**Purpose.** This is a **compaction-recovery aid, not durable storage.** The
file lives only for the lifetime of this session: the driver creates it at
session start and removes it at session end on every exit path. After
compaction, the harness re-pins the original prompt plus the scratchpad's
current contents so you regain the working notes you would otherwise have
lost.

**What to append:**

- Decisions you have made and the reasoning that tipped them, so you do not
  re-litigate them after compaction.
- Open questions you are tracking and what would resolve them.
- TODOs for the remainder of this session — files to touch next, checks to
  re-run, follow-ups inside this session's scope.
- Hypotheses you have already ruled out (with the evidence), so you do not
  re-explore them.

**What NOT to put here.** Anything that needs to outlive this session belongs
in a durable destination, not the scratchpad:

- Decisions, design rationale, or open questions that future sessions need →
  bead notes (`bd update <id> --notes "..."`) or the spec file (`specs/<label>.md`).
- Implementation context for future agents → spec file or `AGENTS.md` /
  companion docs.
- Why a change was made → the commit message.
- Cross-session follow-up work → a new bead (`bd create ...`).

The scratchpad will be deleted when this session ends. If a thought is worth
keeping past session end, write it to one of the durable destinations above
**before** you finish.

**How to append.** Append to the file directly — for example,
`echo "..." >> .wrapix/loom/scratch/<key>/scratch.md` or via the Edit tool.
Do not rewrite or truncate prior contents; the recovery payload is the full
running log.

## Current Spec

Read: specs/loom-harness.md

## Issue Details

Issue: wx-3hhwq.10
Title: <agent-output>port templates</agent-output>

<agent-output>
Port templates to Askama.
</agent-output>

Retry attempt 1 — previous attempt failed with:

<agent-output>
Review raised a concern (verifier-bypass): test mocks the agent backend instead of running the live driver
</agent-output>

## Instructions

> Re-read the previous failure block above and address its specific
> concern before re-implementing.

1. **Understand**: Read the spec and issue thoroughly before making changes
2. **Test Strategy**: Decide between:
   - Property-based tests: For functions with clear invariants, mathematical properties
   - Unit tests: For specific behaviors, edge cases, integration points
3. **Implement**: Write code following the spec
4. **Discovered Work**: If you find tasks outside this issue's scope:
   - Create the issue as a child of the molecule:
     ```bash
     NEW_ID=$(bd create --title="..." --type=task --labels="spec:loom-harness" \
       --parent="wx-3hhwq" --silent)
     ```
   - Set execution order if needed:
     - **Blocks current task**: `bd dep add wx-3hhwq.10 $NEW_ID` (current waits for new)
     - **Depends on current task**: `bd dep add $NEW_ID wx-3hhwq.10` (new waits for current)
     - **Independent**: No dep needed—`bd ready` will surface it when unblocked
   - Do NOT implement discovered tasks in this session—stay focused
5. **Quality Gates**: Before completing, ensure:
   - All tests pass
   - Lint checks pass
   - Changes committed
6. **Blocked vs Waiting**: Distinguish dependency blocks from true blocks:
   - Need user input? → write the reason on a prior line, then `LOOM_BLOCKED`
   - Need other beads done? → Add dep with `bd dep add`, output `LOOM_COMPLETE`
7. **Already Implemented**: If the task's work is already done in the codebase,
   verify correctness, run `bd close wx-3hhwq.10`,
   and emit `LOOM_NOOP` (empty diff means no-op, not zero-progress).
8. **Closing the bead**: After committing your changes and before emitting
   `LOOM_COMPLETE`, run `bd close wx-3hhwq.10`.
   The verdict gate observes `bd-closed` as the agent's responsibility — a
   `LOOM_COMPLETE` without a closed bead is treated as `incomplete-signaling`
   and enters recovery.

## Spec Verifications

After implementing the issue, check the spec's Success Criteria for `[verify]` and
`[judge]` annotations that reference test files relevant to this issue's work.

- **`[verify]` tests**: Create the referenced shell test file if it doesn't exist.
  The test function should exercise the implemented feature and exit 0 on success,
  non-zero on failure. Use `set -euo pipefail`. Exit 77 to skip (e.g. platform
  not available).
- **`[judge]` tests**: Create the referenced judge rubric file if it doesn't exist.
  Each function calls `judge_files "path/to/source"` and
  `judge_criterion "what to evaluate"`. See `tests/judges/example.sh` for format.
- Only create tests for criteria related to the current issue — don't implement
  all spec verifications, just the ones relevant to your work.
- If the test file already exists, add your function to it rather than overwriting.

## Quality Gates

Before outputting LOOM_COMPLETE:
- Tests written and passing
- Lint checks pass
- Changes staged (`git add`)
- Spec verification test files created for relevant criteria
- Bead closed (`bd close wx-3hhwq.10`)

Post-step hooks verify compliance automatically.

## Land the Plane

Before outputting LOOM_COMPLETE, follow the **Session Protocol** in `AGENTS.md`.

## Exit Signals

End your response with exactly **one** of these markers on its own line, as
the final output of the session. The orchestrator parses **only the final
non-empty line** verbatim to derive the gate's verdict — markers emitted on
any earlier line are treated as `swallowed-marker`, and multiple markers on
the final line are likewise rejected. Markers are mutually exclusive: emit
one and only one.

- `LOOM_COMPLETE` — The work succeeded. For worker phases (`loom run`), this
  also means the bead's acceptance criteria are met and the bead has been
  closed via `bd close`. The diff must be non-empty (real changes); see
  `LOOM_NOOP` below for the zero-diff variant.
- `LOOM_NOOP` — The work was already done in tree and this phase
  intentionally produced an empty diff. Close the bead with `bd close`
  before emitting. Use `LOOM_NOOP` instead of `LOOM_COMPLETE` whenever the
  diff is empty — an empty diff with `LOOM_COMPLETE` is treated as
  `zero-progress` and enters recovery. Only valid in worker phases.
- `LOOM_BLOCKED` — You cannot proceed and are self-reporting *without* a
  menu of resolution options. Write the reason on the line immediately
  before the marker (the gate only reads the most recent non-empty prior
  line — multi-paragraph prose is NOT captured). The gate applies
  `loom:blocked` to *this* bead and exits without entering recovery; other
  beads in the molecule continue running. The labelled bead waits for
  human resolution via `loom msg`. **If you have multiple candidate
  resolutions, do NOT use `LOOM_BLOCKED`** — use `LOOM_CLARIFY` below so
  the options reach bead state.
- `LOOM_CLARIFY` — You have a specific question with structured options for
  the human. **Persist the question and the canonical `## Options — …`
  block to bead state before emitting the marker** — either by `bd create`
  on a new clarify bead or by `bd update --notes` + `bd update
  --add-label=loom:clarify` on an existing bead — per the Options Format
  Contract in `specs/loom-gate.md`. The gate does NOT parse your prose for
  options; if the canonical block lives only in your stdout, `loom msg`'s
  queue will be empty. After persisting, the gate applies `loom:clarify`
  to *this* bead and exits without entering recovery; other beads in the
  molecule continue running. The labelled bead waits for `loom msg`
  resolution.
- `LOOM_CONCERN: <token> -- <reason>` — **Review phase only.** The review
  found a quality issue with the molecule's work; push must not fire.
  `<token>` is one of the concern tokens (see the Flag Emission Schema in
  the review template) and `<reason>` is a one-sentence summary. The
  review phase emits `LOOM_CONCERN` xor `LOOM_COMPLETE` — never both, and
  never alongside any other marker. Emitting `LOOM_CONCERN` from any
  non-review phase is a `wrong-phase-marker` error in the verdict gate.
